<resources>
    <string name="app_name">SBS Hypertrophy</string>
    <string name="main_lifts">Main Lifts</string>
    <string name="maxes">Add maxes</string>
    <string name="current_main_maxes">Current maxes</string>

    <string name="mainSquat">Squat</string>
    <string name="mainBench">Bench</string>
    <string name="mainDeadlift">Deadlift</string>
    <string name="mainOHP">OHP</string>

    <string name="mainSquatMax">140</string>
    <string name="mainBenchMax">100</string>
    <string name="mainDeadliftMax">180</string>
    <string name="mainOHPMax">60</string>

    <string-array name="squatAuxiliary1Dropdown">
        <item>Leg press</item>
        <item>Hack Squat</item>
        <item>Smith Machine Squat</item>
    </string-array>
    <string name="title_activity_w1_d1">W1D1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_w1d1">w1d1</string>
</resources>